<resources>
    <string name="app_name">my_accounting</string>
    <string name="current_warehouse">Warehouse №1</string>
    <string name="main_menu">Main menu</string>
    <string name="goods">Товары</string>
    <string name="Groups">Группы</string>
    <string name="docs">Документы</string>
    <string name="input">Приход</string>
    <string name="all">Все</string>
    <string name="output">Расход</string>
    <string name="inspect">Инвентаризация</string>
    <string name="warehouse">Склад</string>
    <string name="scanner">Сканер</string>
    <string name="reports">Отчёты</string>
    <string name="add">Добавить</string>
    <string name="good">Товар</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="field">Поле</string>
    <string name="add_field">Добавить поле</string>
    <string name="image">Картинка</string>
    <string name="price">Цена</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Регистрация</string>
    <string name="save">Save</string>
    <string name="create_report">Сгенерировать отчёт</string>
    <string name="template_warehouse">Main Warehouse</string>
    <string name="template_title_page">Title page</string>
    <string name="barcode">Штрихкод</string>
    <string name="title">Название</string>
    <string name="date">Дата</string>
    <string name="add_good">Добавить товар</string>
    <string name="count">Кол-во</string>
    <string name="create">Создать</string>
    <string name="create_doc">Создать документ</string>
    <string name="type">Тип</string>
    <string name="document_number">Документ №</string>
    <string name="more_information">more information</string>
    <string name="delete">Delete</string>
</resources>