<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/template_header"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:useDefaultMargins="true"
            android:orientation="horizontal"
            android:padding="20dp"
            android:columnCount="2"
            android:rowCount="3">
            <Button
                android:id="@+id/button_goods"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/box_search"
                android:text="@string/goods"/>
            <Button
                android:id="@+id/button_docs"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/document_icon"
                android:text="@string/docs"/>
            <Button
                android:id="@+id/button_scanner"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/barcode_scan"
                android:text="@string/scanner"/>
            <Button
                android:id="@+id/button_reports"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/chart_icon"
                android:text="@string/reports"/>
            <Button
                android:id="@+id/button_input"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/box_input"
                android:text="@string/input"/>
            <Button
                android:id="@+id/button_output"
                style="@style/ButtonGrid"
                android:drawableTop="@drawable/box_output"
                android:text="@string/output"/>
        </GridLayout>
</LinearLayout>