<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item_good"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:id="@+id/main_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_doc_title"
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/document_number"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_doc_type"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:gravity="end"
            android:textSize="20sp" />
    </LinearLayout>
        <TextView
            android:id="@+id/tv_doc_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/main_block"/>
</RelativeLayout>
