<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">
    <include layout="@layout/template_header"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tiles_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp">

        <Spinner
            android:id="@+id/spinner"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/field_title"
                style="@style/CustomEditTextStyle"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/field_barcode"
                style="@style/CustomEditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/barcode"
                android:inputType="number"
                android:drawableEnd="@drawable/barcode_scan_small"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/field_description"
                style="@style/CustomEditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:inputType="text"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/field_cost"
                style="@style/CustomEditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/price"
                android:inputType="number"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_add"
            style="@style/CustomButtonStyle.ButtonSimple"
            android:onClick="addToDb"
            android:text="@string/add"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>