<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLayoutStyle"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/my_icon"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        style="@style/CustomEditTextStyle"
        android:textColorHint="@color/grey"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_icon" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        style="@style/CustomEditTextStyle"
        android:textColorHint="@color/grey"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login"
        style="@style/CustomButtonStyle.ButtonSimple"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:text="@string/action_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"/>

    <Button
        android:id="@+id/registration"
        style="@style/CustomButtonStyle.ButtonSimple"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/registration"
        android:onClick="goToRegistration"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"/>


<!--    <ProgressBar-->
<!--        android:id="@+id/loading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/password"-->
<!--        app:layout_constraintStart_toStartOf="@+id/password"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.3" />-->

</androidx.constraintlayout.widget.ConstraintLayout>