<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_item_good"
    android:padding="5dp"
    android:layout_margin="7dp">

    <ImageView
        android:id="@+id/iv_good_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:src="@drawable/main_icon" />
        <TextView
            android:id="@+id/tv_good_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/iv_good_image"
            android:text="@string/title"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/tv_good_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_good_image"
            android:layout_below="@+id/tv_good_title"
            android:hint="@string/barcode"
            android:textSize="20sp"/>
        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_quantity"
            android:layout_alignEnd="@+id/tv_good_barcode"
            android:background="@null"
            android:src="@drawable/trash"
            android:visibility="gone"
            android:contentDescription="@string/delete" />
    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
